--- a/main.html
+++ b/main.html
@@ -8,6 +8,50 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Hari</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Ram</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Nam</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<h1>List of medias</h1>
+
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="picture">
+		</li>
+
+		<li>
+			<video controls width="500px" height="500px">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+			</video>
+		</li>
+
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
+			</audio>
+		</li>
+	</ol>
+
+
+	
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
